fix: usar apenas -cp com classpath completo no javac, remover --module-path
--module-path e -cp funcionam isoladamente no javac
Classpath do gradle run já inclui JavaFX, megalodonte e Lombok